YAML/simple-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend1
  namespace: frontend-namespace
  labels:
    app: frontend1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend1
  template:
    metadata:
      labels:
        app: frontend1
    spec:
      containers:
      - name: simple-frontend
        image: raghuk8/frontend-application:v1
        ports:
        - containerPort: 80 # <-- MOVED HERE (Under containers)
      imagePullSecrets:
      - name: my-registry-key1 # <-- Cleaned up alignment
