YAML/simple-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend-namespace # 1. Crucial: Must be in the same namespace as your deployment
spec:
  selector:
    app: frontend1              # 2. Crucial: This bridges the service to your deployment's pods
  ports:
  - name: frontend-port
    protocol: TCP
    port: 6789                  # 3. The external port you want to expose
    targetPort: 80              # 4. The internal port your container code is running on
  type: NodePort               # Internal cluster communication (change to NodePort if testing locally via Minikube)
